--- a/GUI/src/gui/GUI.form
+++ b/GUI/src/gui/GUI.form
@@ -368,7 +368,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel9">
       <Properties>
-        <Property name="text" type="java.lang.String" value="1.0"/>
+        <Property name="text" type="java.lang.String" value="i.e 1.0"/>
       </Properties>
     </Component>
   </SubComponents>
